--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
+		"@googlemaps/js-api-loader": "^1.16.8",
 		"@testing-library/jest-dom": "^5.14.1",
 		"@testing-library/react": "^13.0.0",
 		"@testing-library/user-event": "^13.2.1",
@@ -11,11 +12,13 @@
 		"@types/react": "^18.0.0",
 		"@types/react-bootstrap": "^0.32.37",
 		"@types/react-dom": "^18.0.0",
+		"@vis.gl/react-google-maps": "^1.4.2",
 		"bootstrap": "^5.3.3",
 		"prettier": "^3.4.1",
 		"react": "^18.3.1",
 		"react-bootstrap": "^2.10.6",
 		"react-dom": "^18.3.1",
+		"react-form-hook": "^0.0.1",
 		"react-scripts": "5.0.1",
 		"sass": "^1.81.0",
 		"typescript": "^4.4.2",
