--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"private": true,
 	"dependencies": {
 		"@googlemaps/js-api-loader": "^1.16.8",
+		"@hookform/resolvers": "^3.9.1",
 		"@testing-library/jest-dom": "^5.14.1",
 		"@testing-library/react": "^13.0.0",
 		"@testing-library/user-event": "^13.2.1",
@@ -19,10 +20,12 @@
 		"react-bootstrap": "^2.10.6",
 		"react-dom": "^18.3.1",
 		"react-form-hook": "^0.0.1",
+		"react-hook-form": "^7.53.2",
 		"react-scripts": "5.0.1",
 		"sass": "^1.81.0",
 		"typescript": "^4.4.2",
-		"web-vitals": "^2.1.0"
+		"web-vitals": "^2.1.0",
+		"yup": "^1.4.0"
 	},
 	"scripts": {
 		"start": "react-scripts start",
