--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@types/react-bootstrap": "^0.32.37",
 		"@types/react-dom": "^18.0.0",
 		"@vis.gl/react-google-maps": "^1.4.2",
+		"axios": "^1.7.9",
 		"bootstrap": "^5.3.3",
 		"prettier": "^3.4.1",
 		"react": "^18.3.1",
