--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "dynamic-pricing",
 	"version": "0.1.0",
 	"private": true,
+	"proxy": "https://invoice-generator.com",
 	"dependencies": {
 		"@googlemaps/js-api-loader": "^1.16.8",
 		"@hookform/resolvers": "^3.9.1",
@@ -16,6 +17,8 @@
 		"@vis.gl/react-google-maps": "^1.4.2",
 		"axios": "^1.7.9",
 		"bootstrap": "^5.3.3",
+		"cors": "^2.8.5",
+		"express": "^4.21.1",
 		"prettier": "^3.4.1",
 		"react": "^18.3.1",
 		"react-bootstrap": "^2.10.6",
@@ -30,6 +33,7 @@
 	},
 	"scripts": {
 		"start": "react-scripts start",
+		"backend": "cd dynamic-pricing-backend && node main.js",
 		"format": "prettier --write .",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
