--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"react-scripts": "5.0.1",
 		"sass": "^1.81.0",
 		"typescript": "^4.4.2",
+		"uuid": "^11.0.3",
 		"web-vitals": "^2.1.0",
 		"yup": "^1.4.0"
 	},
