--- a/dynamic-pricing-backend/package.json
+++ b/dynamic-pricing-backend/package.json
@@ -7,7 +7,23 @@
   "license": "MIT",
   "proxy": "https://invoice-generator.com",
 
-
+  "dependencies": {
+		
+		"axios": "^1.7.9",
+		"bootstrap": "^5.3.3",
+		"compression": "^1.7.5",
+		"cors": "^2.8.5",
+		"express": "^4.21.1",
+		"express-rate-limit": "^7.5.0",
+		"helmet": "^8.0.0",
+		"prettier": "^3.4.1",
+		
+		"sass": "^1.81.0",
+		
+		"uuid": "^11.0.3",
+		"web-vitals": "^2.1.0",
+		"yup": "^1.4.0"
+	},
   "scripts": {
 		"start": "node main.js",
 		
